Remove unused ImageQualityController friends and includes

This patch removes the following unused test friend:
    FRIEND_TEST_ALL_PREFIXES(
        ImageQualityControllerTest, LowQualityFilterForLiveResize);

In addition, several unused includes have been removed.

BUG=604462

Review URL: https://codereview.chromium.org/1897043003

Cr-Commit-Position: refs/heads/master@{#388570}

Former-commit-id: 8afa1543da130efe4c7965b4e15d45c9ac061331